# sow-data-extractor

./: .gitignore  README.md  pyproject.toml
alternative_approach/code/: bertopic_extraction.py
alternative_approach/extracted-topics/: bertopic_doc_topics.json  bertopic_info.txt
code/data-generation/: datagen.py
code/helpers/: llm.py
code/labeling/: label_sections.py
code/topic-extraction/: consolidate_llm_topics.py  extract_topics_from_files.py
extracted_topics/: canonical_topics_mapping.json  hierarchical_topics.json  hierarchical_topics_mapping.json  labeled_sections_minimal.json  sow_topics.json
generated_data/: manifest_llm.csv  sample_sow_0000.txt  sample_sow_0001.txt  sample_sow_0002.txt  sow_topics.json
