[project]
name = "sow-data-extractor"
version = "0.1.0"
description = "SOW Data Extraction & Topic Analysis Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML/NLP libraries
    "sentence-transformers>=5.1.2",
    "bertopic>=0.17.3",
    "transformers>=4.57.1",
    "torch>=2.9.0",
    
    # Data processing
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    
    # Clustering and dimensionality reduction
    "hdbscan>=0.8.40",
    "umap-learn>=0.5.9",
    
    # HTTP and async
    "aiohttp>=3.13.2",
    "requests>=2.32.5",
    
    # Utilities
    "python-dotenv>=1.2.1",
    "faker>=37.12.0",
    "tqdm>=4.67.1",
    
    # Visualization
    "plotly>=6.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code"]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

